[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "4.0.4", features = ["chrono", "dataloader"] }
async-graphql-rocket = "4.0.4"
chrono = "0.4.23"
dotenv = "0.15.0"
futures = "0.3.21"
rocket = { version = "^0.5.0-rc.2", features = ["json"] }
sea-orm = { version = "^0.9.0", features = [ 
    "sqlx-postgres", 
    "runtime-async-std-native-tls", 
    "macros",
    "with-chrono"
] }
sea-orm-migration = "^0.9.0"
